<resources>
    <string name="app_name">Tourist Guide</string>
    <string name="login_welcome">Welcome</string>
    <string name="login_userid_hint">User ID</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_forgot_pwd_button">Forgot Password</string>
    <string name="login_image_desc">Login cover</string>
    <string name="title_activity_main">Major Cities</string>
    <string name="action_settings">Settings</string>
    <string name="permission_storage_rationale">"Storage permissions are needed for picking images from gallery"
    </string>
    <string name="write_permission_granted">Write permission granted !</string>
    <string name="read_permission_granted">Read permission granted !</string>
    <string name="both_permission_granted">Read/Write permission granted !</string>
    <string name="title_activity_place_details">PlaceDetailsActivity</string>
    <string name="place_details_gallery_button">Gallery</string>
    <string name="place_details_famous_places_button">Famous Places</string>
    <string name="add_place">Add a new place</string>
    <string name="add_place_bt_get_image">Select Image</string>
    <string name="add_place_bt_save">Save</string>
    <string name="add_place_desc">Place Name</string>
    <string name="add_famous_place_desc">Place Description (Max 2 Lines)</string>
    <string name="add_place_edit">Edit</string>
    <string name="desc_save_button">Save</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="add_gallery">Add Image to Gallery</string>
    <string name="title_activity_famous_places">FamousPlacesActivity</string>
    <string name="add_famous_place">Add a new famous place</string>
    <string name="title_activity_famous_place_maps">Map</string>
    <string name="logout_button">Logout</string>
</resources>
