<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smshareef.touristguide.activities.AddPlaceActivity"
    app:theme="@style/AppTheme.NoActionBar">

    <ImageView
        android:id="@+id/addFamousPlaceIv"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="1dp"
        app:srcCompat="@color/colorPrimary" />

    <TextView
        android:id="@+id/addFamousPlaceTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:elevation="1dp"
        android:text="@string/add_famous_place"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/addPlaceSv"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="@+id/addFamousPlaceIv"
        app:layout_constraintRight_toRightOf="@+id/addFamousPlaceIv"
        app:layout_constraintTop_toTopOf="@+id/addFamousPlaceIv" />

    <ScrollView
        android:id="@+id/addFamousPlaceSv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addFamousPlaceIv"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:id="@+id/addFamousPlaceRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hapticFeedbackEnabled="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/addFamousPlaceEt"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:hint="@string/add_place_desc"
                android:inputType="text" />

            <EditText
                android:id="@+id/addFamousPlaceDescEt"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:hint="@string/add_famous_place_desc"
                android:inputType="text"
                android:layout_below="@+id/addFamousPlaceEt"/>

            <ImageView
                android:id="@+id/addFamousPlaceImagePreviewIv"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/addFamousPlaceDescEt"
                android:layout_centerHorizontal="true"
                app:srcCompat="@mipmap/ic_launcher" />


            <Button
                android:id="@+id/addFamousPlaceSelectImageBt"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/add_place_bt_get_image"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/addFamousPlaceImagePreviewIv" />

            <Button
                android:id="@+id/addFamousPlaceSaveBt"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/add_place_bt_save"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"/>

        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
