<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smshareef.touristguide.activities.AddImageActivity">

    <ImageView
        android:id="@+id/addGalleryIv"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="1dp"
        app:srcCompat="@color/colorPrimary" />

    <TextView
        android:id="@+id/addGalleryTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:elevation="1dp"
        android:text="@string/add_gallery"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/addGallerySv"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="@+id/addGalleryIv"
        app:layout_constraintRight_toRightOf="@+id/addGalleryIv"
        app:layout_constraintTop_toTopOf="@+id/addGalleryIv" />

    <ScrollView
        android:id="@+id/addGallerySv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addGalleryIv"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:id="@+id/addGalleryRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hapticFeedbackEnabled="true"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/addGalleryImagePreviewIv"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                app:srcCompat="@mipmap/ic_launcher" />


            <Button
                android:id="@+id/addGallerySelectImageBt"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/add_place_bt_get_image"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/addGalleryImagePreviewIv" />

            <Button
                android:id="@+id/addGallerySaveBt"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/add_place_bt_save"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp" />

        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
